Grease Pencil > Stroke > Normalize Thickness Causes Crash #96352

Closed
opened 2022-03-11 22:21:15 +01:00 by William B · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e

Short description of error
Something about curve editing in combination with "Normalize Thickness" causes a crash. I know there are still a lot of unfinished bits of code with Grease Pencil "Curve Editing", but most give a "not implemented". This is different, since it causes the whole program to crash.

Exact steps for others to reproduce the error
In the attached file: Normalize Thickness Crash.blend simply go to Stroke, then click "Normalize Thickness". This causes my Blender to immediately crash with no warning. It has to be in edit mode, and it has to be with "Curve Editing" turned on.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` **Short description of error** Something about curve editing in combination with "Normalize Thickness" causes a crash. I know there are still a lot of unfinished bits of code with Grease Pencil "Curve Editing", but most give a "not implemented". This is different, since it causes the whole program to crash. **Exact steps for others to reproduce the error** In the attached file: [Normalize Thickness Crash.blend](https://archive.blender.org/developer/F12921890/Normalize_Thickness_Crash.blend) simply go to Stroke, then click "Normalize Thickness". This causes my Blender to immediately crash with no warning. It has to be in edit mode, and it has to be with "Curve Editing" turned on.
Author

Added subscriber: @AquilaTheEagle

Added subscriber: @AquilaTheEagle

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-03-12 10:13:13 +01:00

This issue was referenced by 5dd747a54c

This issue was referenced by 5dd747a54cfb8f0f822b02c8b932083f016b11c8

This issue was referenced by 8617ab153e

This issue was referenced by 8617ab153e25b264651353d82ede6849725ab5f1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96352
No description provided.