Fix T96352: Gpencil crash using Normalize Thickness with Curves

The stroke curve data could be NULL.